--- a/Cargo.toml
+++ b/Cargo.toml
@@ -63,6 +63,7 @@ clap = { version = "4.5", features = [
     "string",
     "cargo",
 ] }
+clap_complete = "4.5.24"
 clio = { version = "0.3.5", features = ["clap", "clap-parse"] }
 colored = "2.1.0"
 comfy-table = "7.1.1"
@@ -90,43 +91,43 @@ humantime-serde = "1.1.1"
 ic-agent = "0.37.1"
 octocrab = "0.39.0"
 self_update = { version = "0.41.0", features = ["archive-tar"] }
-ic-async-utils = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-base-types = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-canister-client-sender = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
+ic-async-utils = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-base-types = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-canister-client = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-canister-client-sender = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
 ic-canisters = { path = "rs/ic-canisters" }
-ic-nervous-system-common-test-keys = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
+ic-nervous-system-common-test-keys = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
 ic-cdk = { git = "https://github.com/dfinity/cdk-rs.git", rev = "3e54016734c8f73fb3acabc9c9e72c960c85eb3b" }
-ic-config = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-crypto-utils-threshold-sig-der = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-http-endpoints-metrics = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-interfaces-registry = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
+ic-config = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-crypto-utils-threshold-sig-der = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-http-endpoints-metrics = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-interfaces-registry = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
 ic-management-backend = { path = "rs/ic-management-backend" }
-ic-management-canister-types = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
+ic-management-canister-types = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
 ic-management-types = { path = "rs/ic-management-types" }
-ic-metrics = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-nns-common = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-nns-constants = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-nns-governance = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-nns-governance-api = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-protobuf = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-registry-client = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-registry-client-fake = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-registry-client-helpers = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-registry-common-proto = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-registry-keys = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-registry-local-registry = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-registry-local-store = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-registry-local-store-artifacts = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-registry-nns-data-provider = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-registry-subnet-type = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-registry-transport = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-sys = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-types = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-nervous-system-root = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-nervous-system-clients = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-ic-sns-wasm = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
-cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
+ic-metrics = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-nns-common = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-nns-constants = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-nns-governance = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-nns-governance-api = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-protobuf = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-registry-client = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-registry-client-fake = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-registry-client-helpers = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-registry-common-proto = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-registry-keys = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-registry-local-registry = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-registry-local-store = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-registry-local-store-artifacts = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-registry-nns-data-provider = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-registry-subnet-type = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-registry-transport = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-sys = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-types = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-nervous-system-root = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-nervous-system-clients = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+ic-sns-wasm = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
+cycles-minting-canister = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
 ic-transport-types = "0.37.1"
 ic-utils = "0.37.0"
 itertools = "0.13.0"
@@ -147,7 +148,7 @@ prost = "0.12"
 rand = { version = "0.8.5", features = ["std_rng"] }
 rand_seeder = "0.3.0"
 regex = "1.10.6"
-registry-canister = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
+registry-canister = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
 reqwest = { version = "0.12", default-features = false, features = [
     "rustls-tls",
     "blocking",
@@ -156,8 +157,9 @@ retry = "2.0.0"
 rstest = { version = "0.22.0", default-features = false }
 rust_decimal = "1.36.0" # or the latest version
 rust_decimal_macros = "1.36.0" # optional, for using macros
+secrecy = { version = "0.8.0" }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0.127"
+serde_json = "1.0.128"
 serde_yaml = "0.9.34"
 shlex = "1.3.0"
 sha2 = "0.10.8"
@@ -178,11 +180,11 @@ tabular = "0.2"
 tempfile = "3.12.0"
 thiserror = "1.0.63"
 tokio = { version = "1.40.0", features = ["full"] }
-tokio-util = "0.7.11"
+tokio-util = "0.7.12"
 url = "2.5.2"
 wiremock = "0.6.1"
 human_bytes = "0.4"
-headless_chrome = { version = "1.0.13", features = [
+headless_chrome = { version = "1.0.14", features = [
     "fetch",
 ], default-features = false }
 mockall = "0.13.0"
@@ -192,7 +194,7 @@ ic-cdk-timers = { git = "https://github.com/dfinity/cdk-rs.git", rev = "3e540167
 ic-cdk-macros = { git = "https://github.com/dfinity/cdk-rs.git", rev = "3e54016734c8f73fb3acabc9c9e72c960c85eb3b" }
 ic-stable-structures = "0.6.5"
 ciborium = "0.2.2"
-dfn_core = { git = "https://github.com/dfinity/ic.git", rev = "0ca139ca39dfee21c8ca75e7fe37422df65e4b96" }
+dfn_core = { git = "https://github.com/dfinity/ic.git", rev = "f3a6cf88defb92e8b457d2438cb5b086b51e26b2" }
 
 # dre-airflow deps, should be replaced with dre-airflow once
 indexmap = { version = "2.5.0", features = ["serde"] }
