--- a/rs/cli/Cargo.toml
+++ b/rs/cli/Cargo.toml
@@ -56,7 +56,7 @@ regex = { workspace = true }
 registry-canister = { workspace = true }
 reqwest = { workspace = true }
 self_update = { workspace = true }
-secrecy = { version = "0.8.0" }
+secrecy = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 sha2 = { workspace = true }
@@ -68,7 +68,7 @@ tempfile = { workspace = true }
 tokio = { workspace = true }
 url = { workspace = true }
 humantime = { workspace = true }
-clap_complete = "4.5.24"
+clap_complete = { workspace = true }
 cryptoki = { workspace = true }
 keyring = { workspace = true }
 comfy-table = { workspace = true }
