--- a/rs/np-notifications/Cargo.toml
+++ b/rs/np-notifications/Cargo.toml
@@ -21,7 +21,7 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
 tokio = { workspace = true }
-tokio-util = "0.7.11"
+tokio-util = { workspace = true }
 tracing = { version = "0.1.40", features = ["log"] }
 tracing-log = { version = "0.2.0", features = ["log-tracer"] }
 tracing-subscriber = "0.3.18"
