--- a/release-index.yaml
+++ b/release-index.yaml
@@ -21,6 +21,14 @@ releases:
         version: 35bfcadd0f2a474057e42393917b8b3ac269627a
       - name: canister-snapshots
         version: 9c42c7c0cdc44dc95a4a2d7685d512786c3fb0e2
+      # Qualification pipeline:
+      # https://github.com/dfinity-ops/release/actions/runs/10799582788/job/29955635367
+      - name: base-hotfix-https-outcalls
+        version: 99ab7f03700ba6cf832eb18ffd55228f56ae927a
+      # Qualification pipeline:
+      # https://github.com/dfinity-ops/release/actions/runs/10800334424/job/29958092500
+      - name: canister-snapshots-hotfix-https-outcalls
+        version: 4bda9fb480129ebe83f83743aab6866d27b27113
   - rc_name: rc--2024-08-21_15-36
     versions:
       # Qualification pipeline:
