--- a/.github/workflows/qualify.yaml
+++ b/.github/workflows/qualify.yaml
@@ -9,6 +9,11 @@ on:
         type: string
         default: ""
   workflow_dispatch:
+    inputs:
+      version:
+        description: "The version that should be qualified"
+        type: string
+        default: ""
 
 # Run one qualification per commit.
 # This means we can have multiple qualifications of different versions
