--- a/.github/workflows/required-checks.yaml
+++ b/.github/workflows/required-checks.yaml
@@ -15,17 +15,23 @@ jobs:
     name: Wait for required jobs to complete or be skipped
     runs-on: ubuntu-latest
     steps:
+      - name: Create GitHub App Token
+        uses: actions/create-github-app-token@v1
+        id: app-token
+        with:
+          app-id: ${{ vars.PR_AUTOMATION_BOT_PUBLIC_APP_ID }}
+          private-key: ${{ secrets.PR_AUTOMATION_BOT_PUBLIC_PRIVATE_KEY }}
       - name: Wait for release controller pipeline
         uses: lewagon/wait-on-check-action@v1.3.4
         with:
           ref: ${{ github.sha }}
           check-name: bazel-release-controller
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: "${{ steps.app-token.outputs.token }}"
           wait-interval: 10
       - name: Wait for build and test
         uses: lewagon/wait-on-check-action@v1.3.4
         with:
           ref: ${{ github.sha }}
           check-name: bazel
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
+          repo-token: "${{ steps.app-token.outputs.token }}"
           wait-interval: 10
