--- a/.github/workflows/dashboard.yaml
+++ b/.github/workflows/dashboard.yaml
@@ -26,7 +26,7 @@ jobs:
         run: |
           docker build -t ghcr.io/dfinity/dre/ic-management-frontend:$GITHUB_SHA -f dashboard/Dockerfile dashboard
 
-      - name:  "🔧 Login to GitHub Container Registry"
+      - name: "🔧 Login to GitHub Container Registry"
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
@@ -37,3 +37,14 @@ jobs:
         if: ${{ startsWith(github.ref, 'refs/tags/v') || startsWith(github.head_ref, 'container') || startsWith(github.ref, 'refs/heads/container') || (github.ref == 'refs/heads/main') }}
         run: |
           docker push ghcr.io/dfinity/dre/ic-management-frontend:$GITHUB_SHA
+
+      ########################################
+      # Update k8s deployments
+      ########################################
+      - name: "🤖 Update k8s deployments"
+        if: ${{ startsWith(github.ref, 'refs/tags/v') || startsWith(github.head_ref, 'container') || startsWith(github.ref, 'refs/heads/container') || (github.ref == 'refs/heads/main') }}
+        uses: ./.github/workflows/update-k8s-deployments
+        with:
+          files-to-update: bases/apps/mainnet-dashboard/frontend/deployment.yaml
+          push-token: ${{ secrets.K8S_API_TOKEN }}
+          component: dashboard frontend
