--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -113,36 +113,6 @@ jobs:
           bazel query --noshow_progress 'kind("oci_push", ...) except //release-controller/...' \
             | xargs -I_target bazel run _target -- --tag ${GITHUB_SHA}
 
-      - name: "❓ Check if dashboard/* changed in last commit"
-        id: check-dashboard-frontend-modified
-        uses: step-security/changed-files@v45
-        with:
-          files: |
-            dashboard/**
-            *.bazel
-            bazel/**
-            .github/**
-
-      - name: "💲 Setting correct paths to update"
-        id: paths
-        shell: bash
-        env:
-          FRONTEND_CHANGED: ${{ steps.check-dashboard-frontend-modified.outputs.any_changed }}
-        run: |
-          files=(
-            bases/apps/mainnet-dashboard/backend/base/deployment.yaml
-            bases/apps/mainnet-dashboard/statefulset-slack.yaml
-            bases/apps/service-discovery/service-discovery.yaml
-            .github/workflows/dre-vector-configs.yaml
-          )
-          if [[ "$FRONTEND_CHANGED" == "true" ]]; then
-            echo "Adding frontend to list of files"
-            files+=( bases/apps/mainnet-dashboard/frontend/deployment.yaml )
-          else
-            echo "Skipping adding of frontend to list of files"
-          fi
-          echo "files=${files[@]}" >> $GITHUB_OUTPUT
-
       ########################################
       # Deploy to github pages
       ########################################
@@ -160,7 +130,7 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' }}
         uses: ./.github/workflows/update-k8s-deployments
         with:
-          files-to-update: ${{ steps.paths.outputs.files }}
+          files-to-update: bases/apps/mainnet-dashboard/backend/base/deployment.yaml bases/apps/mainnet-dashboard/statefulset-slack.yaml bases/apps/service-discovery/service-discovery.yaml .github/workflows/dre-vector-configs.yaml
           push-token: ${{ secrets.K8S_API_TOKEN }}
           component: containers
 
