--- a/.github/workflows/release-controller.yaml
+++ b/.github/workflows/release-controller.yaml
@@ -82,29 +82,19 @@ jobs:
       # Upload container images
       ########################################
 
-      - name: "🔧 Login to GitHub Container Registry"
-        if: ${{ startsWith(github.head_ref, 'container') || startsWith(github.ref, 'refs/heads/container') || (github.ref == 'refs/heads/main') }}
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: "📦 Push images to GitHub Container Registry"
-        if: ${{ startsWith(github.head_ref, 'container') || startsWith(github.ref, 'refs/heads/container') || (github.ref == 'refs/heads/main') }}
-        shell: bash
-        run: |
-          set -ex -o pipefail
-          bazel query --noshow_progress 'kind("oci_push", ...) intersect //release-controller/...' \
-            | xargs -I_target bazel run _target -- --tag ${GITHUB_SHA}
+        id: push-images
+        uses: ./.github/workflows/push
+        if: ${{ github.ref == 'refs/heads/main' }}
+        with:
+          spec: kind("oci_push", ...) intersect //release-controller/...
 
       ########################################
       # Update k8s deployments
-      # FIXME: probably can use registry_publish event to dispatch a separate pipeline.
       ########################################
 
       - name: "🤖 Update k8s deployments for release controller"
-        if: ${{ startsWith(github.head_ref, 'container') || startsWith(github.ref, 'refs/heads/container') || (github.ref == 'refs/heads/main') }}
+        if: ${{ github.ref == 'refs/heads/main' && steps.push-images.outputs.pushed == 'true' }}
         uses: ./.github/workflows/update-k8s-deployments
         with:
           files-to-update: bases/apps/ic-release-controller/controller/controller.yaml bases/apps/ic-release-controller/commit-annotator/commit-annotator.yaml
