--- a/.github/workflows/release-controller.yaml
+++ b/.github/workflows/release-controller.yaml
@@ -88,6 +88,7 @@ jobs:
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
           spec: kind("oci_push", ...) intersect //release-controller/...
+          push-token: ${{ secrets.GITHUB_TOKEN }}
 
       ########################################
       # Update k8s deployments
