--- a/.github/workflows/trusted-neurons-alerts.yaml
+++ b/.github/workflows/trusted-neurons-alerts.yaml
@@ -1,22 +1,23 @@
-name: Build and test
+name: Trusted neurons alerts
 on:
   push:
     branches:
       - "main"
-    paths-ignore:
-      - "release-index.yaml"
-      - "replica-releases/**"
-      - "release-controller/**"
-      - "node-labels/**"
-      - "facts-db/**"
+    paths:
+      - trusted-neurons-alerts/**
+      - requirements*.lock
+      - pyproject.toml
+      - "*.bazel"
+      - bazel/**
+      - .github/**
   pull_request:
-    paths-ignore:
-      - "release-index.yaml"
-      - "replica-releases/**"
-      - "release-controller/**"
-      - "trusted-neurons-alerts/**"
-      - "node-labels/**"
-      - "facts-db/**"
+    paths:
+      - trusted-neurons-alerts/**
+      - requirements*.lock
+      - pyproject.toml
+      - "*.bazel"
+      - bazel/**
+      - .github/**
   workflow_dispatch:
 
 concurrency:
@@ -24,8 +25,8 @@ concurrency:
   cancel-in-progress: true
 
 jobs:
-  bazel:
-    name: Build and test pipeline
+  bazel-trusted-neurons-alerts:
+    name: Trusted neurons alerts pipeline
     runs-on:
       labels: dre-runner-custom
     # This image is based on ubuntu:20.04
@@ -53,39 +54,29 @@ jobs:
         uses: ./.github/workflows/manage-runner-pre
 
       ########################################
-      # Build and test
+      # Test
       # Will run test as a local subprocess because for some tests
-      # create status files on certain locations (like $HOME)
       ########################################
+
       - name: "🚀 Building"
         uses: ./.github/workflows/build
         with:
           # See above where the token is generated: we can't use regular secrets.GITHUB_TOKEN
           # since the push needs to trigger actions again
           GITHUB_TOKEN: "${{ steps.app-token.outputs.token }}"
-          spec: ... except //release-controller/... except attr(name, '.*oci_image.*', //...)
+          spec: //trusted-neurons-alerts/... except attr(name, '.*oci_image.*', //trusted-neurons-alerts/...)
       - name: "🚀 Testing"
-        env:
-          STAGING_PRIVATE_KEY_PEM: "${{ secrets.STAGING_PRIVATE_KEY_PEM }}"
         run: |
           set -e
-          mkdir -p ~/.config/dfx/identity/bootstrap-super-leader/
-          echo $STAGING_PRIVATE_KEY_PEM > ~/.config/dfx/identity/bootstrap-super-leader/identity.pem
-          t=$(mktemp) ; trap 'rm -f "$t"' EXIT
-          bazel query "... except //release-controller/... except attr(tags, 'manual', //...) except attr(name, '.*oci_image.*', //...)" > "$t"
+          t=$(mktemp) ; t2=$(mktemp) ; trap 'rm -f "$t" "$t2"' EXIT
+          bazel query "//trusted-neurons-alerts/... except attr(tags, 'manual', //...) except attr(name, '.*oci_image.*', //trusted-neurons-alerts/...)" > "$t"
           set -x
-          bazel test --target_pattern_file="$t" --config=ci --test_env=HOME=/home/runner
-
-      ########################################
-      # Upload test artifacts
-      ########################################
-
-      - name: "🧪 Upload test artifacts"
-        if: ${{ github.ref == 'refs/heads/main' }}
-        uses: actions/upload-artifact@v4
-        with:
-          name: test-artifacts
-          path: bazel-out/k8-opt/bin/rs/ic-observability/multiservice-discovery/multiservice-discovery
+          r=0
+          bazel test --target_pattern_file="$t" --config=ci --test_env=HOME=/home/runner --explain="$t2" --verbose_explanations || r=?
+          #echo === Explanations === >&2
+          #cat "$t2" >&2
+          #echo == /Explanations === >&2
+          exit $r
 
       ########################################
       # Upload container images
@@ -96,29 +87,20 @@ jobs:
         uses: ./.github/workflows/push
         if: ${{ github.ref == 'refs/heads/main' }}
         with:
-          spec: kind("oci_push", ...) except //release-controller/...
+          spec: kind("oci_push", ...) intersect //trusted-neurons-alerts/...
           push-token: ${{ secrets.GITHUB_TOKEN }}
-
-      ########################################
-      # Deploy to github pages
-      ########################################
-      - name: "🚢 Deploy to GitHub Pages"
-        if: ${{ github.ref == 'refs/heads/main' }}
-        run: |
-          git config --global user.email "actions@github.com"
-          git config --global user.name "GitHub Actions"
-          bazel run "//:mkdocs" -- gh-deploy --force
 
       ########################################
       # Update k8s deployments
       ########################################
-      - name: "🤖 Update k8s deployments"
+
+      - name: "🤖 Update k8s deployments for trusted neurons alerts"
         if: ${{ github.ref == 'refs/heads/main' && steps.push-images.outputs.pushed == 'true' }}
         uses: ./.github/workflows/update-k8s-deployments
         with:
-          files-to-update: bases/apps/mainnet-dashboard/backend/base/deployment.yaml bases/apps/mainnet-dashboard/statefulset-slack.yaml bases/apps/service-discovery/service-discovery.yaml .github/workflows/dre-vector-configs.yaml
+          files-to-update: bases/apps/trusted-neurons-slack-app/manifests.yaml
           push-token: ${{ secrets.K8S_API_TOKEN }}
-          component: containers
+          component: trusted neurons alerts
 
       ########################################
       # Clean up runner
