--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -74,7 +74,7 @@ jobs:
           t=$(mktemp) ; trap 'rm -f "$t"' EXIT
           bazel query "... except //release-controller/... except attr(tags, 'manual', //...) except attr(name, '.*oci_image.*', //...)" > "$t"
           set -x
-          if [ "$(stat -c %s "$t")" == "0" ] ; then echo No testing targets found >&2 ; exit 0 ; fi
+          if [ "$(stat -c %s "$t")" = "0" ] ; then echo No testing targets found >&2 ; exit 0 ; fi
           bazel test --target_pattern_file="$t" --config=ci --test_env=HOME=/home/runner
 
       ########################################
