--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -3,4 +3,5 @@ linker = "clang"
 rustflags = ["-C", "link-arg=-fuse-ld=mold"]
 
 [alias]
-drecross = "zigbuild --bin dre --release --target x86_64-apple-darwin"
+cross-x86 = "zigbuild --bin dre --release --target x86_64-apple-darwin"
+cross-aarch = "zigbuild --bin dre --release --target aarch64-apple-darwin"
